syntax = "proto3";
package proto;
option go_package = "./proto";

enum MessageState {
    INVALID = 0;
    RECEIVED = 1;
    FETCHED = 2;
    PROVING = 3;
    PROVED = 4;
    OUTPUTTING = 5;
    OUTPUTTED = 6;
    FAILED = 7;
}

message Message {
    string messageID = 1;
    uint64 projectID = 2;
    string data = 3;
}
