syntax = "proto3";
package proto;
option go_package = "./proto";
import "message.proto";

service Sequencer {
    rpc Fetch(FetchRequest) returns (FetchResponse);
    rpc Report(ReportRequest) returns (ReportResponse);
}

message FetchRequest {
    uint64 projectID = 1;
}

message FetchResponse {
    repeated Message messages = 1;
}

message ReportRequest {
    repeated string messageIDs = 1;
    MessageState state = 2;
    string description = 3;
}

message ReportResponse {}
